syntax = "proto2";
import "yara.proto";

package olecf;

option (yara.module_options) = {
  name : "olecf"
  root_message: "olecf.Olecf"
  rust_module: "olecf"
  cargo_feature: "olecf-module"
};

message Olecf {
  // Check if file is an OLE CF file
  required bool is_olecf = 1;

  // Get array of stream names
  repeated string stream_names = 2;

  // Get size of a specific stream by name
  repeated int64 stream_sizes = 3;
}